# keydetection

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/libsndfile/: CMakeLists.txt  common.c  config.h
src/: Accuracy.cpp  Accuracy.h  Bpm.cpp  Bpm.h  CMakeLists.txt  DetectedKey.cpp  DetectedKey.h  KeyDetectionMatrix.cpp  KeyDetectionMatrix.h  KeyDetector.cpp  KeyDetector.h  KeyProbability.cpp  KeyProbability.h  RectangularVectors.h  main.cpp  properties_tmp  stringbuilder.h
src/audio/: AudioBuffer.cpp  AudioBuffer.h  ByteToSampleReader.cpp  ByteToSampleReader.h  TConversionTool.cpp  TConversionTool.h  WavDefinition.h  WavFile.cpp  WavFile.h
src/filters/: CompositeKeyProbabilityFilter.cpp  CompositeKeyProbabilityFilter.h  KeyProbabilityFilter.cpp  KeyProbabilityFilter.h  KeyProbabilitySet.cpp  KeyProbabilitySet.h  MultiKeyProbabilityFilter.cpp  MultiKeyProbabilityFilter.h  SingleKeyProbabilityFilter.cpp  SingleKeyProbabilityFilter.h  SpiralKeyProbabilityFilter.cpp  SpiralKeyProbabilityFilter.h
src/key/: Key.cpp  Key.h  KeyCode.cpp  KeyCode.h  KeyRelation.cpp  KeyRelation.h  ShiftedKeyNotation.cpp  ShiftedKeyNotation.h
src/util/: Semaphore.cpp  Semaphore.h  SortObjectWrapper.cpp  SortObjectWrapper.h  Task.cpp  Task.h  TaskProgressListener.cpp  TaskProgressListener.h
test/: CMakeLists.txt
test/basic_tests/: CMakeLists.txt  basic_check.cpp  keyTest.cpp  readWavTest.cpp
