project(libsndfile)

set(HEADER_FILES
        sndfile.c
        common.c
        aiff.c
        alaw.c
        au.c
        audio_detect.c
        avr.c
        broadcast.c
        caf.c
        cart.c
        chanmap.c
        chunk.c
        command.c
        dither.c
        double64.c
        dwd.c
        dwvw.c
        file_io.c
        flac.c
        float32.c
        g72x.c
        gsm610.c
        htk.c
        id3.c
        ima_adpcm.c
        ima_oki_adpcm.c
        interleave.c
        ircam.c
        macos.c
        mat4.c
        mat5.c
        mpc2k.c
        ms_adpcm.c
        nist.c
        ogg.c
        ogg_opus.c
        ogg_pcm.c
        ogg_speex.c
        ogg_vorbis.c
        paf.c
        pcm.c
        pvf.c
        raw.c
        rf64.c
        rx2.c
        sd2.c
        sds.c
        strings.c
        svx.c
        txw.c
        ulaw.c
        voc.c
        vox_adpcm.c
        w64.c
        wav.c
        wavlike.c
        windows.c
        wve.c
        xi.c
        ALAC/ag_dec.c
        ALAC/ag_enc.c
        ALAC/alac_decoder.c
        ALAC/alac_encoder.c
        ALAC/ALACBitUtilities.c
        ALAC/dp_dec.c
        ALAC/dp_enc.c
        ALAC/matrix_dec.c
        ALAC/matrix_enc.c
        G72x/g72x.c
        G72x/g721.c
        G72x/g723_16.c
        G72x/g723_24.c
        G72x/g723_40.c
        GSM610/add.c
        GSM610/code.c
        GSM610/decode.c
        GSM610/gsm_create.c
        GSM610/gsm_decode.c
        GSM610/gsm_destroy.c
        GSM610/gsm_encode.c
        GSM610/gsm_option.c
        GSM610/long_term.c
        GSM610/lpc.c
        GSM610/preprocess.c
        GSM610/rpe.c
        GSM610/short_term.c
        GSM610/table.c
        )

set(SOURCE_FILES
        sndfile.c
        common.h
        chanmap.h
        config.h
        ima_oki_adpcm.h
        ogg.h
        sf_unistd.h
        sfconfig.h
        sfendian.h
        wavlike.h
        ALAC/aglib.h
        ALAC/alac_codec.h
        ALAC/alac_decoder.h
        ALAC/ALACAudioTypes.h
        ALAC/ALACBitUtilities.h
        ALAC/ALACDecoder.h
        ALAC/ALACEncoder.h
        ALAC/dplib.h
        ALAC/EndianPortable.h
        ALAC/matrixlib.h
        ALAC/shift.h
        G72x/g72x.h
        G72x/g72x_priv.h
        GSM610/config.h
        GSM610/gsm.h
        GSM610/gsm610_priv.h
        )

add_library(libsndfile STATIC ${SOURCE_FILES} ${HEADER_FILES})